--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,10 @@
             "email": "dominik.peuscher@check24.de"
         }
     ],
-    "require": {},
+    "require": {
+        "psr/simple-cache": "^1.0",
+        "psr/log": "^1.0"
+    },
     "autoload": {
         "psr-4": {
             "Dpeuscher\\Util\\": "src/"
